samples/_failures_safe/1761190673_c8ecaf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9566117f.c: In function ‘main’:
./samples/SAFE/__tmp_9566117f.c:145:9: error: missing terminating " character
  145 |         "192.168.1.1 - - [10/Oct/2023:14:30:01 +0000] \"GET /index
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_9566117f.c:145:9: error: expected expression at end of input
./samples/SAFE/__tmp_9566117f.c:145:9: error: expected declaration or statement at end of input
